[gd_scene load_steps=30 format=2]

[ext_resource path="res://src/actors/character/character_states/idle.gd" type="Script" id=1]
[ext_resource path="res://src/actors/character/character_states/idle_attack.gd" type="Script" id=2]
[ext_resource path="res://src/actors/character/character_states/sub_weapon0.gd" type="Script" id=3]
[ext_resource path="res://src/actors/character/character_states/sub_weapon1.gd" type="Script" id=4]
[ext_resource path="res://src/actors/character/character_states/jump.gd" type="Script" id=5]
[ext_resource path="res://src/actors/character/character_states/air_subweapon2.gd" type="Script" id=6]
[ext_resource path="res://src/actors/character/character_states/jump_run.gd" type="Script" id=7]
[ext_resource path="res://src/actors/character/character_states/super_jump.gd" type="Script" id=8]
[ext_resource path="res://src/actors/character/character_states/super_jump_run.gd" type="Script" id=9]
[ext_resource path="res://src/actors/character/character_states/air_dash.gd" type="Script" id=10]
[ext_resource path="res://src/actors/character/character_states/fall.gd" type="Script" id=11]
[ext_resource path="res://src/actors/character/character_states/fall_run.gd" type="Script" id=12]
[ext_resource path="res://src/actors/character/character_states/move.gd" type="Script" id=13]
[ext_resource path="res://src/actors/character/character_states/dash.gd" type="Script" id=14]
[ext_resource path="res://src/actors/character/character_states/run.gd" type="Script" id=15]
[ext_resource path="res://src/actors/character/character_states/crouch.gd" type="Script" id=16]
[ext_resource path="res://src/actors/character/character_states/crouch_attack.gd" type="Script" id=17]
[ext_resource path="res://src/actors/character/character_states/in_air.gd" type="Script" id=18]
[ext_resource path="res://src/actors/character/character_states/slide_down.gd" type="Script" id=19]
[ext_resource path="res://src/actors/character/character_states/fly_freely.gd" type="Script" id=20]
[ext_resource path="res://src/actors/character/character_states/crouch_subweapon.gd" type="Script" id=21]
[ext_resource path="res://src/actors/character/character_states/sub_weapon2.gd" type="Script" id=22]
[ext_resource path="res://src/actors/character/character_states/sub_weapon_axe.gd" type="Script" id=23]
[ext_resource path="res://src/actors/character/character_states/air_attack.gd" type="Script" id=24]
[ext_resource path="res://src/actors/character/character_states/air_subweapon_axe.gd" type="Script" id=25]
[ext_resource path="res://src/actors/character/character_states/crouch_subweapon_axe.gd" type="Script" id=26]
[ext_resource path="res://src/actors/character/character_states/idle_hurt.gd" type="Script" id=27]
[ext_resource path="res://src/actors/character/character_states/jump_hurt.gd" type="Script" id=28]
[ext_resource path="res://src/actors/character/character_states/crouch_hurt.gd" type="Script" id=29]

[node name="states" type="Node"]

[node name="idle" type="Node" parent="." groups=[
"stand",
]]
script = ExtResource( 1 )

[node name="idle_attack" type="Node" parent="." groups=[
"stand",
]]
script = ExtResource( 2 )

[node name="idle_guard" type="Node" parent="."]

[node name="idle_guard_hurt" type="Node" parent="."]

[node name="idle_hurt" type="Node" parent="."]
script = ExtResource( 27 )

[node name="sub_weapon0" type="Node" parent="." groups=[
"stand",
]]
script = ExtResource( 3 )

[node name="sub_weapon1" type="Node" parent="." groups=[
"stand",
]]
script = ExtResource( 4 )

[node name="sub_weapon2" type="Node" parent="." groups=[
"stand",
]]
script = ExtResource( 22 )

[node name="sub_weapon_axe" type="Node" parent="." groups=[
"stand",
]]
script = ExtResource( 23 )

[node name="sub_weapon3" type="Node" parent="."]

[node name="jump" type="Node" parent="." groups=[
"in_air",
]]
script = ExtResource( 5 )

[node name="air_attack" type="Node" parent="." groups=[
"in_air",
]]
script = ExtResource( 24 )

[node name="air_subweapon" type="Node" parent="." groups=[
"in_air",
]]
script = ExtResource( 6 )

[node name="air_subweapon_axe" type="Node" parent="." groups=[
"in_air",
]]
script = ExtResource( 25 )

[node name="jump_hurt" type="Node" parent="."]
script = ExtResource( 28 )

[node name="jump_run" type="Node" parent="." groups=[
"in_air",
]]
script = ExtResource( 7 )

[node name="super_jump" type="Node" parent="." groups=[
"in_air",
]]
script = ExtResource( 8 )

[node name="super_jump_run" type="Node" parent="." groups=[
"in_air",
]]
script = ExtResource( 9 )

[node name="air_dash" type="Node" parent="." groups=[
"in_air",
]]
script = ExtResource( 10 )

[node name="fall" type="Node" parent="." groups=[
"in_air",
]]
script = ExtResource( 11 )

[node name="fall_run" type="Node" parent="." groups=[
"in_air",
]]
script = ExtResource( 12 )

[node name="move" type="Node" parent="." groups=[
"stand",
]]
script = ExtResource( 13 )

[node name="dash" type="Node" parent="." groups=[
"stand",
]]
script = ExtResource( 14 )

[node name="run" type="Node" parent="." groups=[
"stand",
]]
script = ExtResource( 15 )

[node name="crouch" type="Node" parent="." groups=[
"crouch",
]]
script = ExtResource( 16 )

[node name="crouch_attack" type="Node" parent="." groups=[
"crouch",
]]
script = ExtResource( 17 )

[node name="crouch_guard" type="Node" parent="."]

[node name="crouch_guard_hurt" type="Node" parent="."]

[node name="crouch_hurt" type="Node" parent="."]
script = ExtResource( 29 )

[node name="quick_flip" type="Node" parent="."]

[node name="in_air" type="Node" parent="."]
script = ExtResource( 18 )

[node name="dead" type="Node" parent="."]

[node name="dive_attack" type="Node" parent="."]

[node name="taunt" type="Node" parent="."]

[node name="slide_down" type="Node" parent="." groups=[
"crouch",
]]
script = ExtResource( 19 )

[node name="fly_freely" type="Node" parent="."]
script = ExtResource( 20 )

[node name="crouch_subweapon" type="Node" parent="." groups=[
"crouch",
]]
script = ExtResource( 21 )

[node name="crouch_subweapon_axe" type="Node" parent="." groups=[
"crouch",
]]
script = ExtResource( 26 )
